--- a/META.yml
+++ b/META.yml
@@ -8,7 +8,7 @@ build_requires:
 configure_requires:
   Module::Build: 0.40
 dynamic_config: 1
-generated_by: 'Module::Build version 0.4002, CPAN::Meta::Converter version 2.112150'
+generated_by: 'Module::Build version 0.4003, CPAN::Meta::Converter version 2.112150'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -17,15 +17,16 @@ name: Apache2-Authen-OdinAuth
 provides:
   Apache2::Authen::OdinAuth:
     file: lib/Apache2/Authen/OdinAuth.pm
-    version: 0.4
+    version: 0.5
   Crypt::OdinAuth:
     file: lib/Crypt/OdinAuth.pm
     version: 0.2
 requires:
   Digest::HMAC: 0
   Digest::SHA256: 0
+  MIME::Base64: 3.13
   YAML::XS: 0
   perl: 5.006
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.4
+version: 0.5
